# Rdesk-for-AI

./: .gitignore  Cargo.toml  README.md  architecture_performance_plan.md  build.bat  build.ps1  build.py  build_flutter.bat  build_flutter.ps1  build_out.txt  build_out_2.txt  build_rust_only.bat  cargo_err.txt  cargo_warn.txt  clippy_err.txt  diff.txt  diff2.txt  diff_conn.txt  diff_ui_session.txt  diff_utf8.txt  diff_video.txt  diff_vram.txt  qc  rustdesk-deploy.skill  stop  test_sodium.rs  vcpkg.json
electron-ui/: electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.web.json
electron-ui/native/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
electron-ui/native/.cargo/: config.toml
electron-ui/native/src/: config_bridge.rs  events.rs  handler.rs  input.rs  lib.rs  session_manager.rs  video.rs
flatpak/: com.rustdesk.RustDesk.metainfo.xml  rustdesk.json
flutter/: pubspec.yaml  test.dart
flutter/lib/: common.dart  consts.dart  main.dart
flutter/linux/: CMakeLists.txt  main.cc
flutter/windows/: CMakeLists.txt
libs/portable/: Cargo.toml  app_metadata.toml  generate.py
libs/scrap/: Cargo.toml  build.rs
res/: rustdesk-link.desktop  rustdesk.desktop  rustdesk.service  update_icons.py
res/msi/: preprocess.py
src/: auth_2fa.rs  client.rs  clipboard.rs  common.rs  core_main.rs  flutter.rs  flutter_ffi.rs  ipc.rs  lib.rs  main.rs  mcp_main.rs  rendezvous_mediator.rs  server.rs  service.rs  ui_session_interface.rs  updater.rs  virtual_display_manager.rs
src/client/: helper.rs  io_loop.rs
tests/: scc_demo.rs
(+149 files in other folders)
