[package]
name = "rustdesk-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs with async/tokio support
napi = { version = "2", features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2"

# RustDesk core as rlib (WITHOUT flutter feature)
librustdesk = { package = "rdesk", path = "../..", default-features = false, features = ["use_dasp"] }
# Direct dependencies from RustDesk workspace
hbb_common = { path = "../../libs/hbb_common" }
scrap = { path = "../../libs/scrap", features = ["wayland"] }

# Utilities
bytes = "1"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
lazy_static = "1.4"
parking_lot = "0.12"

[build-dependencies]
napi-build = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
default = ["hwcodec"]
hwcodec = ["librustdesk/hwcodec", "scrap/hwcodec"]
